Fix for keyboard squishing components

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -19,23 +19,19 @@
 .titleText {
     font-family: "KanitItalic";
     font-size: 9.5vw;
-    height: 35vh;
+    height: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
 
-@media only screen and (max-width: 1200px) and (min-width: 1025px) {
-    /* .titleText {
-        height: 45vh;
-    } */
-}
-
 @media only screen and (max-width: 768px) {
     .titleText {
         font-size: 9vw;
-        height: 25vh;
+        height: auto;
+        min-height: 10%;
+        max-height: 20%;
     }
 }
 
@@ -46,14 +42,14 @@
 .chooseGameContainer {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100%;
     justify-content: center;
     align-items: center;
 }
 
 .gamesChoicesContainer {
     width: 100%;
-    height: 65vh;
+    height: 80%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -114,7 +110,10 @@
     .chooseGameButtons {
         width: 30vw;
         height: 30vw;
-    }    
+    }
+    .chooseGameButtons svg {
+        font-size: 30vw;
+    } 
 }
 
 @media only screen and (max-width: 768px) {
@@ -123,9 +122,12 @@
         flex-direction: column;
     }
     .chooseGameButtons {
-        width: 30vw;
-        height: 30vw;
+        width: 40vw;
+        height: 40vw;
     }  
+    .chooseGameButtons svg {
+        font-size: 40vw;
+    } 
     .gameChoiceContainer > span {
         width: 90vw;
         text-align: center;
@@ -150,6 +152,12 @@
 
 .backArrowContainer:hover svg {
     fill: #FDFEFF;
+}
+
+@media only screen and (max-width: 768px) {
+    .backArrowContainer svg {
+        font-size: 3em;
+    }
 }
 
 /***********************************************************************
@@ -201,7 +209,7 @@
 .gameContainer {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     align-items: center;
 }
@@ -212,7 +220,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 75vh;
+    height: 80%;
 }
 
 .paramsBorder {
@@ -240,19 +248,11 @@
     padding-bottom: 15px;
 }
 
-@media only screen and (max-width: 1200px) and (min-width: 1025px) {
-
-}
-
 @media only screen and (max-width: 1200px) {
     .paramsBorder {
         min-width: 80vw;
         width: 90vw;
     }
-}
-
-@media only screen and (max-width: 1200px) and (min-width: 769px) {
-
 }
 
 @media only screen and (max-width: 768px) {
@@ -349,6 +349,10 @@
     background-image: linear-gradient(#0781b7, #2eb9f7);
 }
 
+.randomYearInput {
+    width: 40%;
+}
+
 @media only screen and (max-width: 1200px) and (min-width: 769px) {
     .titleButtons {
         width: 17vw;
@@ -357,15 +361,23 @@
 
 @media only screen and (max-width: 768px) {
     .titleButtons {
-        width: 60vw;
+        width: 60vw !important;
     }
     .cardFront svg {
-        width: 40vw;
         height: 200px;
+        width: 30vw;
     }
     .playerCard {
         height: 200px;
-        width: 40vw;
+        width: 30vw;
+    }
+    .randomYearInput {
+        width: 80%;
+    }
+    .rollStartContainer {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
 
