--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -7,6 +7,10 @@ html {
   height: 100%;
 }
 
+#root {
+  height: 100%;
+}
+
 @font-face {
   font-family: "KanitItalic";
   src: local("KanitItalic"),
